--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mathematics</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
+
+
 <body>
-    
+    <h1>Algebra</h1>
+        <p>Algebra is the consept based on unknown value. The important thing of algebra is algebra equations. When we solve algebra equations we have to follow many rules</p>
+        <img></img>
 </body>
 </html>
+ 
