--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
 <body>
     <h1>Algebra</h1>
         <p>Algebra is the consept based on unknown value. The important thing of algebra is algebra equations. When we solve algebra equations we have to follow many rules</p>
-        <img></img>
+        <img src="plkpok.jpg">
+    <a href="https://www.britannica.com/science/algebra"> Learn more about Algebra </a>
+    <p><a href="https://www.britannica.com/science/algebra">Definition of Algebra</a></p>
+        <p><a href="https://www.khanacademy.org/math/algebra-basics/alg-basics-algebraic-expressions">Learn more about algebra</a></p>
+
+    
+    <h1>Geometry</h1>
+    <p class="Geometry">Geometry is a branch of mathematics concerned with properties of space such as the distance, shape, size, and relative position of figures. Originally developed to model the physical world, geometry has applications in almost all sciences, and also in art, architecture, and other activities that are related to graphics. Geometry also has applications in areas of mathematics that are apparently unrelated. For example, methods of algebraic geometry are fundamental in Wiles's proof of Fermat's Last Theorem, a problem that was stated in terms of elementary arithmetic, and remained unsolved for several centuries</p>
+    <img src="Shapes in Geometry.png" alt="Shapes in Geometry">
+    
+  <h2><P><a href="Angles.html">Types of angles</a><p></h2>
+    <p> class="Learn-more-about-geometry"><a href="https://www.splashlearn.com/math-vocabulary/geometry/geometry">Learn more about Geometry</a></p>
+    <h1>Logarithm</h1>
+    <p class="Logarithm">In mathematics, the logarithm is the inverse function to exponentiation. That means that the logarithm of a number x to the base b is the exponent to which b must be raised to produce x. For example, since 1000 = 10.10.10, the logarithm base 10 of 1000 is 3, or log10.10.10 (1000) = 3. The logarithm of x to base b is denoted as logb (x), or without parentheses, logb x, or even without the explicit base, log x, when no confusion is possible, or when the base does not matter such as in big O notation. The logarithm base 10 is called the decimal or common logarithm and is commonly used in science and engineering. The binary logarithm uses base 2 and is frequently used in computer science. Logarithms were introduced by John Napier in 1614 as a means of simplifying calculations.[1] They were rapidly adopted by navigators, scientists, engineers, surveyors and others to perform high-accuracy computations more easily. Using logarithm tables, tedious multi-digit multiplication steps can be replaced by table look-ups and simpler addition.</p>
+<img src="logarithm.png" alt="Logarithms">
+
 </body>
 </html>
  
