--- a/Angles.html
+++ b/Angles.html
@@ -1,2 +1,2 @@
-<html><body><h1>Types of angles</h1><img src="Angles.jpg" alt="Angles"><p>
-    <a href=index.html>Go back to home page</a></p></body></html>
+<html><body><h1>Types of angles</h1><img src="Angles.jpg" alt="Angles">
+    <p><a href=index.html>Go back to home page</a></p></body></html>
